Another ricapar fix
Margins for links look bad in elements that contain non-link text.

--- a/content/css/ricapar.css
+++ b/content/css/ricapar.css
@@ -77,7 +77,8 @@
     #header a {
         margin-right: 0 !important;
     }
-    .user a {
+    .user a,
+    .pages a {
         margin: 0 !important;
     }
 
